--- a/app/src/main/res/layout/slide_list_content.xml
+++ b/app/src/main/res/layout/slide_list_content.xml
@@ -7,7 +7,9 @@
         android:id="@+id/edit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorAccent"/>
 
     <EditText
         android:id="@+id/edit_slideduration"
@@ -15,5 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/edit_title"
         android:inputType="number"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorAccent"/>
 </RelativeLayout>
