--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,11 +7,12 @@
     <dimen name="large_text_margin">24dp</dimen>
     <dimen name="edit_text">50dp</dimen>
     <dimen name="edit_text_large">150dp</dimen>
-    <dimen name="small">50dp</dimen>
-    <dimen name="large">110dp</dimen>
-    <dimen name="xtralarge">170dp</dimen>
+    <dimen name="small">0dp</dimen>
+    <dimen name="large">50dp</dimen>
+    <dimen name="xtralarge">100dp</dimen>
     <dimen name="padding">10dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
