--- a/app/src/main/res/layout/slide_list_content.xml
+++ b/app/src/main/res/layout/slide_list_content.xml
@@ -7,6 +7,7 @@
         android:id="@+id/edit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorAccent"/>
