--- a/app/src/main/res/layout/fragment_presentation.xml
+++ b/app/src/main/res/layout/fragment_presentation.xml
@@ -13,4 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/progressBarHor"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/section_label"
+        android:layout_alignBottom="@id/progressBarHor"/>
+
 </RelativeLayout>
