--- a/app/src/main/res/layout/slide_list_content.xml
+++ b/app/src/main/res/layout/slide_list_content.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <EditText
+    <TextView
         android:id="@+id/edit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,7 +12,7 @@
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorAccent"/>
 
-    <EditText
+    <TextView
         android:id="@+id/edit_slideduration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
