--- a/app/src/main/res/layout/content_edit_slide_detail.xml
+++ b/app/src/main/res/layout/content_edit_slide_detail.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edit_slideTitle"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:hint="XX min"
         android:layout_marginTop="12dp"
         android:textAppearance="?attr/textAppearanceListItem"
