--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -52,6 +52,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:text="Start" />
+    <android.widget.Button
+        android:id="@+id/stop_timer_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:text="Stop" />
 
 
 </android.support.design.widget.CoordinatorLayout>
