timers optimized, formatting double numbers, much more

--- a/app/src/main/res/layout/content_presentation.xml
+++ b/app/src/main/res/layout/content_presentation.xml
@@ -18,7 +18,7 @@
         android:id="@+id/progressBarSlide"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="15dp"
         android:layout_below="@id/title_textView" />
 
     <TextView
@@ -32,7 +32,7 @@
         android:id="@+id/progressBarTotal"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_below="@id/timer_textView"
         android:layout_alignBottom="@id/progressBarTotal"/>
 
