a lot of ui changes, added settings page, catching null strings now

--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -21,7 +21,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@color/dimmedWhite">
 
         </android.support.v7.widget.Toolbar>
 
