--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.slidetimer.oli.slidetimer.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:background="@color/colorPrimary">
 
     <EditText
         android:id="@+id/edit_name"
@@ -19,7 +20,7 @@
         android:layout_marginTop="@dimen/small"
         android:hint="@string/name"
         android:inputType="text"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/dimmedWhite"
         android:textColorHint="@color/colorAccent" />
 
     <EditText
@@ -29,7 +30,7 @@
         android:layout_height="@dimen/edit_text"
         android:layout_marginTop="@dimen/large"
         android:hint="@string/duration"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/dimmedWhite"
         android:textColorHint="@color/colorAccent"/>
 
     <EditText
@@ -39,7 +40,7 @@
         android:layout_height="@dimen/edit_text"
         android:layout_marginTop="@dimen/xtralarge"
         android:hint="@string/slides"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/dimmedWhite"
         android:textColorHint="@color/colorAccent"/>
 
 
