--- a/app/src/main/res/layout/content_presentation_settings.xml
+++ b/app/src/main/res/layout/content_presentation_settings.xml
@@ -5,11 +5,11 @@
     android:background="@color/colorPrimary">
 
     <EditText
-        android:id="@+id/edit_slideTitle"
+        android:id="@+id/edit_redAlarmTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Title"
+        android:inputType="numberSigned"
+        android:hint="Change time of Notification"
         android:layout_alignParentTop="true"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@color/dimmedWhite"
@@ -18,15 +18,4 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="64dp" />
 
-    <EditText
-        android:id="@+id/edit_slideDuration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_slideTitle"
-        android:inputType="numberDecimal"
-        android:hint="XX min"
-        android:layout_marginTop="12dp"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@color/dimmedWhite"
-        android:textColorHint="@color/colorAccent"/>
 </RelativeLayout>
