--- a/app/src/main/res/layout/slidemdf_list.xml
+++ b/app/src/main/res/layout/slidemdf_list.xml
@@ -6,8 +6,7 @@
     android:name=".slidemdfListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".slidemdfListActivity"
-    tools:listitem="@layout/slidemdf_list_content" />
+    tools:listitem="@layout/slidemdf_list_content"
+    android:background="@color/colorPrimary"/>
