--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#222222</color>
-    <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">#f9a825</color>
+    <color name="colorPrimary">#212426</color>
+    <color name="white">#fff</color>
+    <color name="dimmedWhite">#bbb</color>
+    <color name="colorPrimaryLight">#424242</color>
+    <color name="colorAccent">#fab647</color>
     <color name="colorRedAlarm">#c61818</color>
 </resources>
