--- a/app/src/main/res/layout/slidemdf_list_content.xml
+++ b/app/src/main/res/layout/slidemdf_list_content.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/id"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
@@ -15,9 +15,15 @@
 
     <TextView
         android:id="@+id/content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@color/dimmedWhite"/>
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/Slide_Title"
+        android:background="@color/colorPrimary"
+        android:src="@drawable/ic_create_black_24dp" />
 </LinearLayout>
