--- a/app/src/main/res/layout/activity_slidemdf_detail.xml
+++ b/app/src/main/res/layout/activity_slidemdf_detail.xml
@@ -50,6 +50,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/slidemdf_detail_container"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+        android:src="@drawable/ic_create_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
