--- a/app/src/main/res/layout/content_edit_slide_detail.xml
+++ b/app/src/main/res/layout/content_edit_slide_detail.xml
@@ -18,15 +18,29 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="64dp" />
 
-    <EditText
-        android:id="@+id/edit_slideDuration"
+    <NumberPicker
+        android:id="@+id/edit_pickHour"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_slideTitle"
-        android:inputType="numberDecimal"
-        android:hint="XX min"
-        android:layout_marginTop="12dp"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@color/dimmedWhite"
-        android:textColorHint="@color/colorAccent"/>
+        android:layout_height="60dp"
+        android:layout_below="@id/edit_slideTitle"
+        android:solidColor="@color/colorPrimary"
+        android:background="@color/colorAccent" />
+
+    <NumberPicker
+        android:id="@+id/edit_pickMin"
+        android:layout_toRightOf="@+id/edit_pickHour"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_below="@id/edit_slideTitle"
+        android:solidColor="@color/colorPrimary"
+        android:background="@color/colorAccent" />
+
+    <NumberPicker
+        android:id="@+id/edit_pickSec"
+        android:layout_toRightOf="@+id/edit_pickMin"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_below="@id/edit_slideTitle"
+        android:solidColor="@color/colorPrimary"
+        android:background="@color/colorAccent" />
 </RelativeLayout>
